# InvestorEvents

./: .env.example  .gitignore  .trigger_sync  README.md  ai_events.csv  fetch_ai_events.py  fetch_all_events.py  fetch_dividends_announce.py  fetch_historical_crashes.py  fetch_jesen.huang_talk_events.py  fetch_nvidia_events.py  fetch_stock_events.py  fetch_upcoming_earnings.py  historical_crashes.csv  nvidia_events.csv  pyproject.toml  raw_column_definition.md  raw_event_ai_events.csv  raw_event_dividends_announce.csv  raw_event_historical_crashes.csv  raw_event_jesen.huang_talk.csv  raw_event_nvidia_events.csv  raw_event_stock_events.csv  raw_event_upcoming_earnings.csv  stock_events.csv  upcoming_earnings.csv
.github/: sync-to-Downstream-investment.yml  sync-to-Downstream.yml  sync-to-GoogleSheet.Banks.yml  sync-to-biztrends.yml  sync.yml
.github/workflows/: sync-events.yml  sync-to-Downstream.yml  sync-to-GoogleSheet.Banks.yml  sync-to-investor-conference.yml  sync-to-mac-mini.yml  weekly-dividends.yml  weekly-earnings.yml
