[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investor-events"
version = "0.1.0"
description = "Fetch investor-relevant market events using Gemini LLM"
requires-python = ">=3.11"
dependencies = [
    "llm @ file:///../llm",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []
